[gd_scene load_steps=22 format=2]

[ext_resource path="res://Scenes/GameThings/BaseLevel.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Creatures-no-bg.png" type="Texture" id=2]
[ext_resource path="res://Scripts/GameBasics/PlayerChangeGridSize.gd" type="Script" id=3]
[ext_resource path="res://Assets/Objects/Sem Fundo.png" type="Texture" id=4]
[ext_resource path="res://Styles/Fonts/GameFont.tres" type="DynamicFont" id=5]
[ext_resource path="res://Assets/Objects/Modern.png" type="Texture" id=6]
[ext_resource path="res://Scripts/GameLevels/Level_15.gd" type="Script" id=7]
[ext_resource path="res://Scenes/UI/LevelComplete.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scripts/GameBasics/Goal.gd" type="Script" id=9]
[ext_resource path="res://Assets/Blocks/Sheet.png" type="Texture" id=10]
[ext_resource path="res://Assets/Blocks/Bandeira = Meta.tscn" type="PackedScene" id=11]
[ext_resource path="res://Assets/Blocks/Ghostin = Vc.tscn" type="PackedScene" id=12]
[ext_resource path="res://Assets/Blocks/IFs/While LV 15.png" type="Texture" id=13]
[ext_resource path="res://Scripts/GameBasics/Help.gd" type="Script" id=14]
[ext_resource path="res://Assets/Objects/Speed.png" type="Texture" id=15]
[ext_resource path="res://Styles/Fonts/Help Font.tres" type="DynamicFont" id=18]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6.5, 6.5 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 6, 6 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 266.667, 52.5 )

[node name="Level_15" type="Node2D"]
script = ExtResource( 7 )

[node name="BaseLevel" parent="." instance=ExtResource( 1 )]

[node name="Player" type="KinematicBody2D" parent="." groups=["player"]]
modulate = Color( 0.541176, 0.541176, 0.921569, 1 )
position = Vector2( 16, 16 )
script = ExtResource( 3 )
type = "minus"

[node name="Player" type="Sprite" parent="Player"]
position = Vector2( 3, 3 )
texture = ExtResource( 2 )
centered = false
hframes = 17
vframes = 15
frame = 186

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2( 7.5, 8.5 )
shape = SubResource( 1 )

[node name="RayCast2D" type="RayCast2D" parent="Player"]
position = Vector2( 8, 8 )
cast_to = Vector2( 0, 16 )

[node name="Tween" type="Tween" parent="Player"]

[node name="Goal" type="Node2D" parent="."]
position = Vector2( 296, 144 )
script = ExtResource( 9 )
nextLevelPath = "res://Scenes/GameLevels/Level_16.tscn"
goalNumber = 1

[node name="Sprite" type="Sprite" parent="Goal"]
position = Vector2( 16, 24 )
texture = ExtResource( 4 )
hframes = 20
vframes = 10
frame = 176

[node name="Area2D" type="Area2D" parent="Goal/Sprite"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Goal/Sprite/Area2D"]
shape = SubResource( 4 )

[node name="LevelComplete" parent="Goal" instance=ExtResource( 8 )]

[node name="Label" type="Label" parent="."]
margin_left = 304.0
margin_right = 344.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 5 )
text = "16"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResetAndDouble" type="Node" parent="."]

[node name="Recharge1" type="Area2D" parent="ResetAndDouble"]
position = Vector2( 96, 96 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ResetAndDouble/Recharge1"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="ResetAndDouble/Recharge1"]
texture = ExtResource( 6 )
hframes = 20
vframes = 21
frame = 143

[node name="Recharge2" type="Area2D" parent="ResetAndDouble"]
position = Vector2( 136, 32 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ResetAndDouble/Recharge2"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="ResetAndDouble/Recharge2"]
texture = ExtResource( 6 )
hframes = 20
vframes = 21
frame = 143

[node name="Recharge3" type="Area2D" parent="ResetAndDouble"]
position = Vector2( 264, 72 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ResetAndDouble/Recharge3"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="ResetAndDouble/Recharge3"]
texture = ExtResource( 6 )
hframes = 20
vframes = 21
frame = 143

[node name="Recharge4" type="Area2D" parent="ResetAndDouble"]
position = Vector2( 224, 136 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ResetAndDouble/Recharge4"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="ResetAndDouble/Recharge4"]
texture = ExtResource( 6 )
hframes = 20
vframes = 21
frame = 143

[node name="Recharge5" type="Area2D" parent="ResetAndDouble"]
position = Vector2( 16, 56 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ResetAndDouble/Recharge5"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="ResetAndDouble/Recharge5"]
texture = ExtResource( 6 )
hframes = 20
vframes = 21
frame = 143

[node name="Decoration" type="Node" parent="."]

[node name="Sprite" type="Sprite" parent="Decoration"]
position = Vector2( 8, 168 )
texture = ExtResource( 6 )
hframes = 20
vframes = 21
frame = 142

[node name="Sprite2" type="Sprite" parent="Decoration"]
position = Vector2( 8, 8 )
texture = ExtResource( 6 )
hframes = 20
vframes = 21
frame = 146

[node name="Sprite3" type="Sprite" parent="Decoration"]
position = Vector2( 72, 176 )
texture = ExtResource( 6 )
hframes = 20
vframes = 21
frame = 138

[node name="Sprite4" type="Sprite" parent="Decoration"]
position = Vector2( 84.5, 168.5 )
texture = ExtResource( 6 )
hframes = 20
vframes = 21
frame = 138

[node name="Sprite5" type="Sprite" parent="Decoration"]
position = Vector2( 84.5, 176.5 )
texture = ExtResource( 6 )
hframes = 20
vframes = 21
frame = 137

[node name="Sprite6" type="Sprite" parent="Decoration"]
position = Vector2( 8, 120 )
texture = ExtResource( 6 )
hframes = 20
vframes = 21
frame = 118

[node name="Sprite7" type="Sprite" parent="Decoration"]
position = Vector2( 240, 176 )
texture = ExtResource( 6 )
hframes = 20
vframes = 21
frame = 115

[node name="Sprite8" type="Sprite" parent="Decoration"]
position = Vector2( 296, 176 )
texture = ExtResource( 6 )
hframes = 20
vframes = 21
frame = 108

[node name="Blocks" type="Node" parent="."]

[node name="Bandeira = Meta" parent="Blocks" instance=ExtResource( 11 )]
position = Vector2( 104, 144 )

[node name="Ghostin = Vc" parent="Blocks" instance=ExtResource( 12 )]
position = Vector2( 104, 152 )

[node name="Raio = Carregar" type="Node2D" parent="Blocks"]
position = Vector2( 152, 152 )

[node name="StaticBody2D2" type="StaticBody2D" parent="Blocks/Raio = Carregar"]
position = Vector2( 40, 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Blocks/Raio = Carregar/StaticBody2D2"]
shape = SubResource( 5 )

[node name="Sprite" type="Sprite" parent="Blocks/Raio = Carregar/StaticBody2D2"]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 10 )
hframes = 10
vframes = 6
frame = 13

[node name="StaticBody2D3" type="StaticBody2D" parent="Blocks/Raio = Carregar"]
position = Vector2( 56, 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Blocks/Raio = Carregar/StaticBody2D3"]
shape = SubResource( 5 )

[node name="Sprite" type="Sprite" parent="Blocks/Raio = Carregar/StaticBody2D3"]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 10 )
hframes = 10
vframes = 6
frame = 30

[node name="StaticBody2D4" type="StaticBody2D" parent="Blocks/Raio = Carregar"]
position = Vector2( 72, 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Blocks/Raio = Carregar/StaticBody2D4"]
shape = SubResource( 5 )

[node name="Sprite" type="Sprite" parent="Blocks/Raio = Carregar/StaticBody2D4"]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 10 )
hframes = 10
vframes = 6
frame = 27

[node name="WhileLv15" type="Sprite" parent="Blocks"]
position = Vector2( 248, 40 )
scale = Vector2( 0.15, 0.16 )
texture = ExtResource( 13 )

[node name="StaticBody2D" type="StaticBody2D" parent="Blocks/WhileLv15"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Blocks/WhileLv15/StaticBody2D"]
position = Vector2( -213.333, -202.5 )
shape = SubResource( 6 )

[node name="Speed" type="Sprite" parent="Blocks"]
position = Vector2( 281, 6 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 15 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="Help" type="CanvasLayer" parent="."]
pause_mode = 2
script = ExtResource( 14 )

[node name="Help" type="Control" parent="Help"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="ColorRect" parent="Help/Help"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.2, 0.207843, 0.211765, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Help/Help"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Var" type="VBoxContainer" parent="Help/Help/HBoxContainer"]
margin_right = 638.0
margin_bottom = 720.0
rect_pivot_offset = Vector2( -592, -56 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="WhatVar" type="Label" parent="Help/Help/HBoxContainer/Var"]
margin_right = 638.0
margin_bottom = 93.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 18 )
text = "
Define qual Ã© o objeto
"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Help/Help/HBoxContainer/Var"]
margin_top = 97.0
margin_right = 638.0
margin_bottom = 254.0

[node name="Level Things" type="Label" parent="Help/Help/HBoxContainer/Var/HBoxContainer"]
margin_right = 638.0
margin_bottom = 157.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 18 )
text = "  - Ghostin

  - Raio

  - Bandeira"

[node name="Haiiro" type="Sprite" parent="Help/Help/HBoxContainer/Var"]
visible = false
position = Vector2( 216, 160 )
scale = Vector2( 4, 4 )
texture = ExtResource( 2 )
hframes = 17
vframes = 15
frame = 186

[node name="Ghostin" type="Sprite" parent="Help/Help/HBoxContainer/Var"]
modulate = Color( 0.541176, 0.541176, 0.921569, 1 )
position = Vector2( 218, 100 )
scale = Vector2( 4, 4 )
texture = ExtResource( 2 )
hframes = 17
vframes = 15
frame = 182

[node name="Bandeira" type="Sprite" parent="Help/Help/HBoxContainer/Var"]
position = Vector2( 218, 228 )
scale = Vector2( 4, 4 )
texture = ExtResource( 4 )
hframes = 20
vframes = 10
frame = 176

[node name="Caveira" type="Sprite" parent="Help/Help/HBoxContainer/Var"]
visible = false
position = Vector2( 216, 344 )
scale = Vector2( 4, 4 )
texture = ExtResource( 4 )
hframes = 20
vframes = 10
frame = 197

[node name="Sprite" type="Sprite" parent="Help/Help/HBoxContainer/Var"]
position = Vector2( 218, 164 )
scale = Vector2( 4, 4 )
texture = ExtResource( 6 )
hframes = 20
vframes = 21
frame = 143

[node name="Value" type="VBoxContainer" parent="Help/Help/HBoxContainer"]
margin_left = 642.0
margin_right = 1280.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="WhatVal" type="Label" parent="Help/Help/HBoxContainer/Value"]
margin_right = 638.0
margin_bottom = 93.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 18 )
text = "
Define o que vai acontecer com o objeto
"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Help/Help/HBoxContainer/Value"]
margin_top = 97.0
margin_right = 638.0
margin_bottom = 318.0

[node name="Level Things" type="Label" parent="Help/Help/HBoxContainer/Value/HBoxContainer"]
margin_right = 638.0
margin_bottom = 221.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 18 )
text = "  - Voce: O que vai ser controlado

  - Carregar: Ao entrar a velocidade do
  jogador retorna ao valor inicial

  - Meta:Ao entrar em todas a fase sera
  concluida"

[connection signal="body_entered" from="Goal/Sprite/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="Goal/Sprite/Area2D" to="Goal" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Goal/Sprite/Area2D" to="Goal" method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="ResetAndDouble/Recharge1" to="." method="_on_Recharge1_body_entered"]
[connection signal="body_exited" from="ResetAndDouble/Recharge1" to="." method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="ResetAndDouble/Recharge2" to="." method="_on_Recharge2_body_entered"]
[connection signal="body_exited" from="ResetAndDouble/Recharge2" to="." method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="ResetAndDouble/Recharge3" to="." method="_on_Recharge3_body_entered"]
[connection signal="body_exited" from="ResetAndDouble/Recharge3" to="." method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="ResetAndDouble/Recharge4" to="." method="_on_Recharge4_body_entered"]
[connection signal="body_exited" from="ResetAndDouble/Recharge4" to="." method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="ResetAndDouble/Recharge5" to="." method="_on_Recharge5_body_entered"]
[connection signal="body_exited" from="ResetAndDouble/Recharge5" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
